@@ -37,7 +37,6 @@ requires-python = ">=3.9"
 dependencies = [
     'numpy>=1.22.3',
     'biopython>=1.80',
-    'networkx>=2.0',
     'GridDataFormats>=0.4.0',
     'mmtf-python>=1.0.0',
     'joblib>=0.12',
@@ -89,6 +88,7 @@ analysis = [
     "seaborn",
     "scikit-learn",
     "tidynamics>=1.0.0",
+    'networkx>=2.0',
 ]
 doc = [
     "sphinx",
